--- a/Arbeit.tex
+++ b/Arbeit.tex
@@ -141,28 +141,28 @@ bibencoding=utf8
 
 % -------------- Konfiguration ------------------------------------------------
 
-\thesistype{Masterarbeit}
+\thesistype{Master project}
 
 % Titel der Arbeit
-\title{Titel der Arbeit}
+\title{Predict lidar in multi weather senaros}
 
 % AutorIn <- Dein Name :-)
 \author{Behrooz bozorgchamy}
 
 % Dein Geburtsdatum
-\birthday{Geburtsdatum}
+\birthday{30-09-1998}
 
 % Dein Geburtsort:
-\birthplace{Geburtsort}
+\birthplace{Tehran-Iran}
 
 % DeinE BetreuerIn:
-\supervisor{Betreuer}
+\supervisor{Richard Marcus}
 
 % Beginn der Arbeit
-\bdate{Beginn der Arbeit}
+\bdate{April 2024}
 
 % Abgabetermin
-\edate{Ende der Arbeit}
+\edate{July 2024}
 
 % -------------- Ende der Konfiguration ---------------------------------------
 
