--- a/Arbeit.tex
+++ b/Arbeit.tex
@@ -189,8 +189,7 @@ bibencoding=utf8
 
 % Inhaltsverzeichnis
 \tableofcontents
-
-
+\input{00-abstract.tex}
 % eine Leerseite
 \cleardoublepage
 % end of short mode
@@ -199,6 +198,7 @@ bibencoding=utf8
 \mainbody
 
 % ---------- Kapitel ---------
+
 
 \input{01-introduction.tex} 
 
