--- a/Arbeit.tex
+++ b/Arbeit.tex
@@ -202,8 +202,9 @@ bibencoding=utf8
 \input{00-abstract.tex}
 \input{01-introduction.tex} 
 
-\input{02-related_work.tex} 
+\input{02-preparetions.tex} 
 
+\input{03-main-part.tex}
 % ---------- Anhang ----------
 
 \begin{appendix}
