--- a/Literatur.bib
+++ b/Literatur.bib
@@ -1071,3 +1071,22 @@ author = {Yasutaka Furukawa and Carlos Hernández}
   publisher={NBS}
 }
 
+@article{burnett_ijrr23,
+author = {Keenan Burnett and David J Yoon and Yuchen Wu and Andrew Z Li and Haowei Zhang and Shichen Lu and Jingxing Qian and Wei-Kang Tseng and Andrew Lambert and Keith YK Leung and Angela P Schoellig and Timothy D Barfoot},
+title ={Boreas: A multi-season autonomous driving dataset},
+journal = {The International Journal of Robotics Research},
+volume = {42},
+number = {1-2},
+pages = {33-42},
+year = {2023},
+doi = {10.1177/02783649231160195},
+}
+@misc{burnett2023boreasmultiseasonautonomousdriving,
+      title={Boreas: A Multi-Season Autonomous Driving Dataset}, 
+      author={Keenan Burnett and David J. Yoon and Yuchen Wu and Andrew Zou Li and Haowei Zhang and Shichen Lu and Jingxing Qian and Wei-Kang Tseng and Andrew Lambert and Keith Y. K. Leung and Angela P. Schoellig and Timothy D. Barfoot},
+      year={2023},
+      eprint={2203.10168},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/2203.10168}, 
+}
