--- a/03-main-part.tex
+++ b/03-main-part.tex
@@ -1,1 +1,25 @@
 \chapter{Main Part}
+\section{Setup}
+\subsection{Dataset}
+Requirements for the Dataset on this project:
+\begin{itemize}
+    \item Large Dataset: The dataset should be extensive to cover a wide range of scenarios.
+    \item Multiple Weather Conditions: It should include data from various weather conditions to ensure robustness.
+\end{itemize}
+Dataset Recommendation: A dataset that meets these requirements is BOARS.\\
+This dataset offers several benefits:
+\begin{itemize}
+    \item Comprehensive Toolkit: A toolkit is provided to assist with using the dataset.
+    \item Weather Diversity: The dataset includes data from multiple weather conditions.
+\end{itemize}
+However it has some drawbacks:
+\begin{itemize}
+    \item Linux-Only Toolkit: The toolkit is compatible only with Linux devices.
+    \item Hardware Requirements: The toolkit requires radar, LiDAR, and camera data to function.
+    \item Large File Sizes: Each part of the dataset is quite large, with each section being approximately 100GB, making it difficult to download.
+    \item Poor Documentation: The documentation for each section of the dataset is inadequate.
+    \item Third-Party Software: Downloading parts of the dataset requires installing third-party software from Amazon.
+\end{itemize}
+
+\subsection{Model}
+The pix2pix and SPADE is my choice.
