--- a/03-main-part.tex
+++ b/03-main-part.tex
@@ -1,4 +1,4 @@
-\chapter{Main Part}
+\chapter{Comparative Analysis of Weather Masking}
 \section{Setup}
 \subsection{Dataset}
 Requirements for the Dataset on this project:
