--- a/Arbeit.tex
+++ b/Arbeit.tex
@@ -205,6 +205,8 @@ bibencoding=utf8
 \input{02-preparetions.tex} 
 
 \input{03-main-part.tex}
+
+\input{04-conclusion.tex}
 % ---------- Anhang ----------
 
 \begin{appendix}
