--- a/00-abstract.tex
+++ b/00-abstract.tex
@@ -1,3 +1,4 @@
 \begin{abstract}
-	The purpose of this project is improve prediction of cloud point image in per weather condtions. To achieve this, we use a multi weather condtions dataset and change some models to get a weather mask as another input. Our results show that models can prediction better when the camera image has some distorted. These findings suggest that model prediction cannot be better in some weather condtions but it can help to reduce camera distorted. Keywords: Multiweather, boreas, LIdar.
+	The purpose of this project is improve prediction of cloud point image in per weather condtions. To achieve this, we use a multi weather condtions dataset and change some models to get a weather mask as another input. Our results show that models can prediction better when the camera image has some distorted. These findings suggest that model prediction cannot be better in some weather condtions but it can help to reduce camera distorted.
+	\\ Keywords: Multiweather, Boreas, Lidar.
 \end{abstract}
