--- a/01-introduction.tex
+++ b/01-introduction.tex
@@ -7,7 +7,7 @@ The performance of Lidar point clouds can be significantly affected by various w
 
 Moreover, foggy conditions can reduce the range and accuracy of Lidar sensors, as the dense particles in the air scatter the laser beams. This scattering effect can cause the Lidar to misinterpret the distance and shape of objects. Windy conditions can also introduce noise into the data, as moving debris or leaves can be mistakenly identified as obstacles.
 
-Furthermore, the accumulation of dirt or water droplets on the Lidar sensor or camera lens can degrade the quality of the data collected. Regular maintenance and cleaning of these sensors are crucial to ensure optimal performance but It is not an easy job in  moving vehicle. Advanced algorithms and machine learning models are being developed to mitigate these weather-related issues, but challenges remain in achieving consistent accuracy across all conditions.
+Furthermore, the accumulation of snowflakes or water droplets on the Lidar sensor or camera lens can degrade the quality of the data collected. Regular maintenance and cleaning of these sensors are crucial to ensure optimal performance but It is not an easy job in  moving vehicle. 
 \begin{figure}[!ht]
 	\begin{minipage}[t]{.45\linewidth}
 		
