--- a/03-main-part.tex
+++ b/03-main-part.tex
@@ -15,7 +15,7 @@ This dataset offers several benefits:
 However it has some drawbacks:
 \begin{itemize}
     \item Linux-Only Toolkit: The toolkit is compatible only with Linux devices.
-    \item Hardware Requirements: The toolkit requires radar, LiDAR, and camera data to function.
+    \item All dataset Requirements: The toolkit requires radar, LiDAR, and camera data to function.
     \item Large File Sizes: Each part of the dataset is quite large, with each section being approximately 100GB, making it difficult to download.
     \item Poor Documentation: The documentation for each section of the dataset is inadequate.
     \item Third-Party Software: Downloading parts of the dataset requires installing third-party software from Amazon.
